# rsbtc

./: .gitignore  Readme.md  cargo.toml
lib/: Cargo.toml
lib/src/: crypto.rs  error.rs  lib.rs  network.rs  sha256.rs  types.rs  util.rs
lib/src/types/: block.rs  blockchain.rs  transaction.rs
miner/: Cargo.toml  alice.pub.pem  alicepriv.cbor
miner/src/: main.rs
node/: Cargo.toml
node/src/: main.rs  util.rs
