[package]
name = "btc_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
bigdecimal = "0.4.7"
chrono = { version = "0.4.39", features = ["serde"] }
ciborium = "0.2.2"
ecdsa = { version = "0.16.9", features = ["signing", "verifying", "serde", "pem"] }
hex = "0.4.3"
k256 = { version = "0.13.4", features = ["serde", "pem"] }
rand = "0.8.5"
serde = {version = "1.0.216", features = ["derive"]}
sha256 = "1.5.0"
thiserror = "2.0.8"
uint = "0.10.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
spki = { version = "0.7.3", features = ["pem"] }
tokio = { version = "1.43.0", features = ["net"] }
